--- a/about.html
+++ b/about.html
@@ -13,16 +13,18 @@
 
   <body class="aboutHome">
 
+
+
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="overlay-content">
-        <a href="about.html">About</a>
+        <a href="index.html">Home</a>
         <a href="#">Contact</a>
       </div>
     </div>
 
 <span class="navbtn" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
-
+<div class="img">
 <div class="h1Mission">
 
 
@@ -36,7 +38,7 @@
 
 
 <!-- 1 -->
-<div id="main">
+<div class= "mains" id="main">
 <h2>Andrew Bastian</h2>
 
 
@@ -52,13 +54,13 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>"Neque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+  <p>"1 porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 </div>
 
 </div>
 
 <!-- 2 -->
-<div id="main">
+<div class= "mains" id="main">
 
 <h2>Andrew Bastian</h2>
 
@@ -74,11 +76,11 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>"Neque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+  <p>"2 porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 </div>
 </div>
 <!-- 3 -->
-<div id="main">
+<div  class= "mains" id="main">
 <h2>Andrew Bastian</h2>
 
 
@@ -94,11 +96,11 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>"Neque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+  <p>"3 porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 </div>
 </div>
 <!-- 4 -->
-<div id="main">
+<div class= "mains" id="main">
 <h2>Andrew Bastian</h2>
 
 
@@ -114,10 +116,10 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>"Neque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+  <p>"4 porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
 </div>
 </div>
-
+</div>
 <footer>
 
   <a href="#" class="fa fa-facebook"></a>
@@ -130,6 +132,7 @@
 
 <!--nav bar  -->
 <script type="text/javascript">
+
 function openNav() {
   document.getElementById("myNav").style.height = "5%";
 }
@@ -138,31 +141,46 @@ function openNav() {
 function closeNav() {
   document.getElementById("myNav").style.height = "0%";
 }
+
+
 // profile
-
-/* Set the width of the side navigation to 250px and the left margin of the page content to 250px and add a black background color to body */
-document.getElementById('profile').addEventListener("click", open);
-document.getElementById('x').addEventListener('click',close);
-
-
-// document.addEventListener("click",)
-
-function open() {
-  console.log("clicked");
-  document.getElementById("mySidenav").style.width = "250px";
-  document.getElementById("main").style.marginLeft = "250px";
-  document.body.style.backgroundColor = "rgba(0,0,0,0.4)";
-}
-
-/* Set the width of the side navigation to 0 and the left margin of the page content to 0, and the background color of body to white */
-
-function close() {
-  console.log("another");
-  document.getElementById("mySidenav").style.width = "0";
-  document.getElementById("main").style.marginLeft = "0";
-  document.body.style.backgroundColor = "black";
-}
 </script>
+
+<script type="text/javascript">
+
+var profiles = document.getElementsByClassName('profilebtn');
+for (var i=0; i< profiles.length; i++){
+  profiles[i].onclick = open;
+}
+function open() {
+  var sidenavs = document.getElementsByClassName('sidenav');
+  for (var i=0; i< sidenavs.length; i++){
+    sidenavs[i].style.width = "250px";
+
+    var sidenavs = document.getElementsByClassName('mains');
+    for (var i=0; i< sidenavs.length; i++){
+      sidenavs[i].style.width = "250px";
+  console.log("clicked");
+}
+}
+}
+
+var profiles = document.getElementsByClassName("closeX");
+for (var i=0; i< profiles.length; i++){
+    profiles[i].onclick = close;
+  }
+  function close(){
+  var sidenavs = document.getElementsByClassName('sidenav');
+  for (var i=0; i< sidenavs.length; i++){
+    sidenavs[i].style.width = "0";
+    var sidenavs = document.getElementsByClassName('main');
+    for (var i=0; i< sidenavs.length; i++){
+      sidenavs[i].style.width = "0";
+    }
+  }}
+</script>
+
+
 
   </body>
 </html>
