--- a/about.html
+++ b/about.html
@@ -14,6 +14,9 @@
   <body class="aboutHome">
 
 
+<div class="backgroundColor">
+
+
 
     <div id="myNav" class="overlay">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -25,6 +28,7 @@
 
 <span class="navbtn" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
 <div class="img">
+  <img class= "gf" src="img/gf.jpg" alt="">
 <div class="h1Mission">
 
 
@@ -120,6 +124,7 @@
 </div>
 </div>
 </div>
+</div>
 <footer>
 
   <a href="#" class="fa fa-facebook"></a>
@@ -134,7 +139,7 @@
 <script type="text/javascript">
 
 function openNav() {
-  document.getElementById("myNav").style.height = "5%";
+  document.getElementById("myNav").style.height = "80px";
 }
 
 /* Close */
@@ -162,19 +167,18 @@ profiles.forEach((element, i)=> {
 })
 
 
-var profiles = Array.form(document.getElementsByClassName("closeX"));
-for (var i=0; i< profiles.length; i++){
-    profiles[i].onclick = close;
-  }
-  function close(){
-  var sidenavs = document.getElementsByClassName('sidenav');
-  for (var i=0; i< sidenavs.length; i++){
-    sidenavs[i].style.width = "0";
-    var sidenavs = document.getElementsByClassName('main');
-    for (var i=0; i< sidenavs.length; i++){
-      sidenavs[i].style.width = "0";
-    }
-  }}
+var x = Array.from(document.getElementsByClassName("closeX"));
+let sidenav = Array.from(document.getElementsByClassName('sidenav'));
+let main = Array.from(document.getElementsByClassName('mains'));
+
+x.forEach((element, i)=> {
+  element.addEventListener('click', (event)=> {
+    sidenav[i].style.width = "0";
+    sidenav[i].style.zIndex = order++;
+    mains.forEach(element => element.style.marginLeft = "0")
+  })
+})
+
 </script>
 
 
