--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 
 <!-- 3 -->
 <div  class= "mains" id="main">
-<h2>Andrew Bastian</h2>
+<h2>Jaun</h2>
 
 
 
@@ -105,7 +105,7 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>"3 porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+  <p>Jaun has worked as a skydive instructor and is at Lambda because he can do it from home</p>
 </div>
 </div>
 <!-- 4 -->
@@ -125,7 +125,7 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>"4 porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+  <p>	Grew up in Blaine WA and is at Lambda because of the no upfront cost</p>
 </div>
 </div>
 </div>
