--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>	Grew up in Blaine WA and is at Lambda because of the no upfront cost</p>
+  <p>	Spencer grew up in Blaine WA and is at Lambda because of the no upfront cost</p>
 </div>
 </div>
 </div>
