more about andrew

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
   <a href="#" class="fa fa-twitter"></a>
   <a href="#" class="fa fa-google"></a>
   <a href="#" class="fa fa-linkedin"></a>
-  <p>"1 porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est quiNeque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
+  <p>I'm Andrew. Ejoyed this 1st build week a lot. It has been satifying to dig into a bigger project.</p>
 </div>
 
 </div>
