--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
           <h2>Spencer Summrville</h2>
 
           <span class="profilebtn" id="profile" style="font-size:30px;cursor:pointer">
-            <img src="img/fish.jpg" alt=""></span>
+            <img src="img/P11104650.jpg" alt=""></span>
           <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closeX" id="x">&times;</a>
             <a href="#" class="fa fa-twitter"></a>
