--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
     <article class="photoPbox">
-      <img src="img/P1100345.jpg" alt="">
+      <img src="img/P1100345.jpg" alt="fuit">
       <h3>Access Your Recipes Online, Any Time</h3>
       <p>First and foremost our site is a hub for all your recipes!
         Be it passed down through word of mouth or scribed in
@@ -58,7 +58,7 @@
 
 
     <article class="photoPbox">
-      <img src="img/P1100347.jpg" alt="">
+      <img src="img/P1100347.jpg" alt="fruit">
       <h3>Keep Memories of the Past Alive</h3>
       <p>Our primary focus is to provide a place where you can keep your family food traditions alive
         to share with your loved ones and keep them in a place for new generations.
@@ -69,7 +69,7 @@
 
 
     <article class="photoPbox">
-      <img src="img/P1100343.jpg" alt="">
+      <img src="img/P1100343.jpg" alt="fruit">
       <h3>In Our Day and Age...</h3>
       <p>As our focus shifts more and more away from traditional housemaking skills it is
         imperitave to keep these memories intact somewhere so we can remember those who came before us!</p>
