--- a/about.html
+++ b/about.html
@@ -15,13 +15,13 @@
   <div class="backgroundColor">
 
     <nav id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <a href="javascript:void(0)" class="closebtn" id="xClose">&times;</a>
       <div class="overlay-content">
         <a href="index.html">Home</a>
       </div>
     </nav>
 
-    <span class="navbtn" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; menu</span>
+    <span id = "navbtn" class="navbtn" style="font-size:30px;cursor:pointer">&#9776; menu</span>
 
     <!-- <div class="img"> -->
       <img class="gf" src="img/gf.jpg" alt="GF">
@@ -109,61 +109,62 @@
 
       <!--nav bar  -->
       <script type="text/javascript">
-        function openNav() {
-          document.getElementById("myNav").style.height = "10%";
-        }
+      var navBtn = document.getElementById("navbtn");
+      var myNav = document.getElementById("myNav");
+      navBtn.addEventListener("click", (event) => {
+        myNav.style.height = "10%";
+      })
+        // function openNav() {
+        //   document.getElementById("myNav").style.height = "10%";
+        // }
 
         /* Close */
-        function closeNav() {
-          document.getElementById("myNav").style.height = "0%";
-        }
+        var navX = document.getElementById('xClose');
+        navX.addEventListener("click", (event)=>{
+          myNav.style.height = "0";
+        })
+        // function closeNav() {
+        //   document.getElementById("myNav").style.height = "0%";
+        // }
       </script>
 
       // profile
 
       <script type="text/javascript">
-//array of dom elements
-        var profiles = Array.from(document.getElementsByClassName('profilebtn'));
-//
-        // let sidenavs = Array.from(document.getElementsByClassName('sidenav'));
-//
-        var sidebar = document.getElementById('mySidenav');
-        let mains = Array.from(document.getElementsByClassName('mains'));
-//
-        // let order = 1;
-        var profileData = {"andrew": "I'm Andrew. Ejoyed this 1st build week a lot. It has been satifying to dig into a bigger project.",
-        "barbara": "Hey there, I'm Barbara. I am a student studying Full Stack Web Development at Lambda School. Our team created this landing page and the Secret Family Recipes Cookbook app.",
-        "juan" : 'Juan has worked as a skydive instructor and is at Lambda because he can do it from home',
-        "spencer" : 'Grew up in Blaine WA and is at Lambda because of the no upfront cost'};
-//      interating over profile pictures and creating a function and applying it to each profile using an anon function
-        profiles.forEach((profile, i) => {
-//adding an event addEventListener to every picture. when there is a click addEventListener calls your function "event" - (object with some data about event)
-          profile.addEventListener('click', (event) => {
-//
+
+
+
+
+var profiles = Array.from(document.getElementsByClassName('profilebtn'));
+var sidebar = document.getElementById('mySidenav');
+let mains = Array.from(document.getElementsByClassName('mains'));
+
+var profileData = {"andrew": "I'm Andrew. Ejoyed this 1st build week a lot. It has been satifying to dig into a bigger project.",
+"barbara": "Hey there, I'm Barbara. I am a student studying Full Stack Web Development at Lambda School. Our team created this landing page and the Secret Family Recipes Cookbook app.",
+"juan" : 'Juan has worked as a skydive instructor and is at Lambda because he can do it from home',
+"spencer" : 'Grew up in Blaine WA and is at Lambda because of the no upfront cost'};
+
+profiles.forEach((profile, i) => {
+profile.addEventListener('click', (event) => {
 document.getElementById('biotext').innerText = profileData[profile.id];
-//sidenav = array "i" indexes into array
-            sidebar.style.width = "250px";
-//incrementing by 1 and setting new zindex
-            // sidenavs[i].style.zIndex = order++;
-//moves all profile pictures over. anon function, arg = element, changes margin left.
-            mains.forEach(element => element.style.marginLeft = "250px")
-          })
-        })
+sidebar.style.width = "250px";
+mains.forEach(element => element.style.marginLeft = "250px")
+})
+})
 
 
-        var x = Array.from(document.getElementsByClassName("closeX"));
-        let sidenav = Array.from(document.getElementsByClassName('sidenav'));
-        let main = Array.from(document.getElementsByClassName('mains'));
+var x = Array.from(document.getElementsByClassName("closeX"));
+let sidenav = Array.from(document.getElementsByClassName('sidenav'));
 
-        x.forEach((element, i) => {
-          element.addEventListener('click', (event) => {
-            sidenav[i].style.width = "0";
-            // sidenav[i].style.zIndex = order++;
-            mains.forEach(element => element.style.marginLeft = "0")
-          })
-        })
-      </script>
+x.forEach((element, i) => {
+element.addEventListener('click', (event) => {
+sidenav[i].style.width = "0";
+mains.forEach(element => element.style.marginLeft = "0")
+})
+})
 
+
+</script>
 
 
 </body>
